# pyrender

./: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/source/examples/: dynamic_topology.rst  index.rst
examples/: dynamic_topology_demo.py  particle_system.py  tessellation_demo.py
pyrender/: __init__.py  advanced_features.py  compute_shader.py  constants.py  mesh.py  primitive.py  scene.py  shader_program.py
pyrender/shaders/compute/: particle_system.comp  post_process.comp
pyrender/shaders/tessellation/: displacement.tesc  displacement.tese
pyrender/shaders/transform/: particle_update.vert
tests/unit/: test_advanced_features.py  test_compute_shader.py  test_dynamic_topology.py
